# RDMM

./: .gitignore  CMakeLists.txt  README.md
data/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
source/: blob.h  llah.cpp  llah.h  main.cpp  main.h  main.old  paper.cpp
source/mylib/: glwindow.cpp  glwindow.h  mycam.cpp  mycam.h  myimage.cpp  myimage.h  mymat.cpp  mymat.h
src/: blob_new.cpp  llah.cpp  main.cpp
